cssに関する記述を修正。タイトルを修正。

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="/_vercel/insights/script.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css" />
-  <title>Vercel HTML Starter</title>
-  <meta name="description" content="High-performance HTML based website template." />
+  <title>JS Calculator</title>
+  <meta name="description" content="Calculator" />
 </head>
 
 <body>
